[package]
name = "kvs"
version = "0.1.0"
authors = ["Andrew Watkins <andrew.watkinz@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "2.33.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
ron = "0.6.0"
bson = "0.14"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
path = "src/lib.rs"
name = "kvs"
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
